# mythra

./: .gitignore  .travis.yml  Aptfile  Cargo.toml  Procfile  README.md  deprecated.travis.yml
.github/workflows/: gcp.yml  heroku.yml  releases.yml  rust.yml  stoplight.yml
reference/: Mythra.v1.yaml
src/: api.rs  cli.yaml  download.rs  engines.rs  lib.rs  main.rs  types.rs  utils.rs  utils2.rs
src/engines/: freemp3cloud.rs  mod.rs  mp3clan.rs  mp3direct.rs  mp3red.rs  mp3s.rs  mp3tomato.rs  myfreemp3.rs  redthreemp3.rs
