[package]
name = "mythra"
version = "0.1.0"
authors = ["Diretnan Domnan <diretnandomnan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
async-trait = "0.1.41"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
futures = "0.3.5"
log = "0.4"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.12.0"
indicatif = "0.15.0"
cursive = "0.15.0"
